# Repo_GAT

./: .gitignore  README.md  pyproject.toml
configs/: fungi.yaml  human.yaml
scripts/: chat_exp.sh  infer_batch.sh  infer_single.sh  plot_attention.sh  prepare_data.sh  run_hparam_optuna.sh  run_hparam_sweep.sh  run_training.sh
src/gat_pipeline/: cli.py  config.py  utils.py
src/gat_pipeline/data/: create_embeddings.py  esm.py  protein_graph.py  setup_fungal_data.py
src/gat_pipeline/explain/: gnnexplainer.py
src/gat_pipeline/inference/: __init__.py  single.py
src/gat_pipeline/training/: train.py
src/gat_pipeline/visualization/: attention_plot.py
