[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-gat"
version = "0.1.0"
description = "Reorganised GAT-based fungal pathogenicity pipeline"
authors = [
  {name = "Lucia JC Lab"}
]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torch-geometric>=2.3",
  "numpy>=1.24",
  "networkx>=2.8",
  "matplotlib>=3.5",
  "fair-esm>=2.0.0",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "biopython>=1.81",
  "tqdm>=4.65",
  "wandb>=0.15",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=7.0"
]
hpo = [
  "optuna>=3.5"
]

[project.scripts]
gat-pipeline = "gat_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
